Déplacement des variables du jeu dans un Namespace Global afin d'en améliorer l'utilisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Add the executable
 add_executable(MyExecutable
-    main.cpp
-    fonctions.cpp
-    joueurs.cpp
+	main.cpp
+	fonctions.cpp
+	joueurs.cpp
+	jeu.cpp
 )
 
 # Include directories
 include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
+	${CMAKE_CURRENT_SOURCE_DIR}
 )
